# gradelens

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  cli.py  config.yaml  pyproject.toml  requirements.txt  run.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
core/: __init__.py  base.py  dataset.py  evaluator.py  scorer_registry.py  scorers.py  scorers_iwrite.py
data/: manual_scores_batch1.json  manual_scores_batch2.json  manual_scores_batch3.json  manual_scores_batch4.json  manual_scores_batch5.json  manual_scores_batch6.json  manual_scores_batch7.json
data/analysis/: agent_gap_report.md  gap_analysis.json
data/essays/argumentative/: a_nh_001.json  a_nh_002.json  a_nh_003.json  a_nh_004.json  a_nh_005.json  a_pl_001.json  a_pl_002.json  a_pl_003.json  a_th_002.json  a_th_003.json  a_th_004.json  a_th_005.json  a_th_006.json  a_th_007.json  a_th_008.json  a_th_009.json  a_th_010.json  a_th_011.json  a_th_012.json  a_tm_001.json  a_tm_003.json  a_tm_004.json  a_tm_005.json
data/essays/chart/: c_nh_001.json  c_nh_002.json  c_nh_003.json  c_th_001.json  c_th_002.json  c_th_004.json  c_th_005.json  c_th_006.json  c_th_007.json  c_th_008.json
data/essays/mixed/: m_bl_002.json  m_bl_003.json  m_ch_001.json  m_cl_001.json  m_cl_002.json  m_om_002.json
data/essays/news/: n_nh_001.json  n_nh_002.json  n_nh_003.json  (+6 more)
data/results/: agent_scores.json
scorers/: __init__.py  agent_scorer.py  data_manager.py  iwrite_scorer.py  llm_scorer.py  pigai_scorer.py
scripts/: agent_batch_runner.py  agent_batch_scorer.py  run_gap_analysis.py
tests/: test_core.py
